fix mobile nav being too close to header

--- a/themes/catppollo/sass/parts/_header.scss
+++ b/themes/catppollo/sass/parts/_header.scss
@@ -294,7 +294,7 @@ header nav .menu-wrapper {
   header nav {
     flex-direction: column;
     width: 100%;
-    top: 4em;
+    top: 4.5em;
     position: absolute;
     padding-bottom: 1em;
     border-bottom: 4px solid var(--primary-color);
